--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
-{
+{"homepage": "https://siddhi08patil.github.io/react_spotify_clone",
+
   "name": "spotify-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
